[gd_scene load_steps=12 format=2]

[ext_resource path="res://widgets/menu_button/menu_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://containers/home_display/home_display.tscn" type="PackedScene" id=2]
[ext_resource path="res://cards/BTCard/BTCard.tscn" type="PackedScene" id=3]
[ext_resource path="res://screens/multiplayer/multiplayer_screen.gd" type="Script" id=4]
[ext_resource path="res://widgets/settings_button/SettingsButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://fonts/font40.res" type="DynamicFont" id=6]

[sub_resource type="DynamicFontData" id=8]
font_path = "res://fonts/ArchivoNarrow-Bold.ttf"

[sub_resource type="DynamicFont" id=3]
size = 95
font_data = SubResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 58
font_data = SubResource( 8 )

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Background:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 720, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ButtonsLayout/dummyBtn:rect_position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1500, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("ButtonsLayout/HostBtn:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "lobbyin"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Background/Title:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "BARFSTONE
", "MULTIPLAYER
" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background/Subtitle:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "A BT GAMING 
EXPERIENCE", "" ]
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Background:rect_rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 720, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ButtonsLayout/dummyBtn:rect_position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1500, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("ButtonsLayout/HostBtn:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.690196, 0.32549, 1 ) ]
}

[node name="multiplayer_Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 40.0
margin_bottom = 40.0
rect_rotation = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="red" type="ColorRect" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1782.61
margin_top = -257.809
margin_right = 1217.39
margin_bottom = 442.191
rect_rotation = -29.3
rect_pivot_offset = Vector2( 750, 15 )
color = Color( 0.627451, 0.172549, 0.172549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="green" type="ColorRect" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1436.61
margin_top = 362.191
margin_right = 1563.39
margin_bottom = 1062.19
rect_rotation = -29.3
rect_pivot_offset = Vector2( 750, 15 )
color = Color( 0.364706, 0.423529, 0.32549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="line" type="ColorRect" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1445.61
margin_top = 345.191
margin_right = 1554.39
margin_bottom = 375.191
rect_rotation = -29.4
rect_pivot_offset = Vector2( 750, 15 )
color = Color( 0.909804, 0.909804, 0.909804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Background"]
margin_left = -562.0
margin_top = 178.691
margin_right = -62.0
margin_bottom = 291.691
rect_rotation = -29.3
custom_colors/font_color = Color( 0.909804, 0.909804, 0.909804, 1 )
custom_fonts/font = SubResource( 3 )
text = "BARFSTONE
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Subtitle" type="Label" parent="Background"]
margin_left = -352.0
margin_top = 219.691
margin_right = 148.0
margin_bottom = 396.691
rect_rotation = -29.3
custom_colors/font_color = Color( 0.909804, 0.909804, 0.909804, 1 )
custom_fonts/font = SubResource( 4 )
text = "A BT GAMING 
EXPERIENCE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonsLayout" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 160.0
margin_top = -222.0
margin_right = 560.0
margin_bottom = 222.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dummyBtn" parent="ButtonsLayout" instance=ExtResource( 1 )]
margin_left = 1500.0
margin_right = 1900.0
texture_click_mask = null
button_text = "Multiplayer Menu"

[node name="NameHBOX" type="HBoxContainer" parent="ButtonsLayout/dummyBtn"]
margin_left = -1500.0
margin_top = 25.0
margin_right = -1100.0
margin_bottom = 82.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLBL" type="Label" parent="ButtonsLayout/dummyBtn/NameHBOX"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 6 )
text = "Name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameTXT" type="LineEdit" parent="ButtonsLayout/dummyBtn/NameHBOX"]
margin_left = 104.0
margin_right = 364.0
margin_bottom = 57.0
custom_fonts/font = ExtResource( 6 )
text = "John Longballs"
max_length = 20
expand_to_text_length = true
placeholder_text = "John longballs"

[node name="JoinBtn" parent="ButtonsLayout" instance=ExtResource( 1 )]
margin_top = 112.0
margin_right = 400.0
margin_bottom = 220.0
texture_click_mask = null
button_text = "Join"

[node name="HostBtn" parent="ButtonsLayout" instance=ExtResource( 1 )]
margin_top = 224.0
margin_right = 400.0
margin_bottom = 332.0
texture_click_mask = null
button_text = "Host"

[node name="BackBtn" parent="ButtonsLayout" instance=ExtResource( 1 )]
margin_top = 336.0
margin_right = 400.0
margin_bottom = 444.0
texture_click_mask = null
button_text = "Back"

[node name="HomeDisplay" parent="." instance=ExtResource( 2 )]
margin_left = 20.0
margin_top = 20.0
margin_right = 520.0
margin_bottom = 320.0
card_visual = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "lobbyin"
anims/RESET = SubResource( 7 )
anims/lobbyin = SubResource( 6 )

[node name="SettingsButton" parent="." instance=ExtResource( 5 )]

[connection signal="pressed" from="ButtonsLayout/JoinBtn" to="." method="_on_JoinBtn_pressed"]
[connection signal="pressed" from="ButtonsLayout/HostBtn" to="." method="_on_HostBtn_pressed"]
[connection signal="pressed" from="ButtonsLayout/BackBtn" to="." method="_on_BackBtn_pressed"]
